[metadata]
name = dmm-reminder

[options]
include_package_data = True
python_requires = >=3.7

[mypy]
ignore_missing_imports = True

[flake8]
exclude = .git, .tox, .venv, .eggs, build, dist, docs
max-line-length = 120

[isort]
skip = .git, .tox, .venv, .eggs, build, dist, docs
line_length = 120

[tool:pytest]
norecursedirs = .git .tox .venv* requirements*
testpaths = tests
addopts =
    --cov main.py
    --cov-report term-missing
    --cov-config .coveragerc
    -n auto

[coverage:run]
branch = True
source =
    main.py
    tests
